# bevy_simple_pixel_camera

./: Cargo.toml  README.md
examples/: shapes.rs  spinning_square.rs
src/: example.rs  lib.rs  pixel_camera.rs
