[package]
name = "bevy_simple_pixel_camera"
description = "An epic crate"
license = "MIT"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# NOTE: disable dynamic_linking when shipping
[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }

[[example]]
name = "shapes"

[[example]]
name = "spinning_square"